# codepilot

./: .gitignore  AGENTS.md  README.md  pyproject.toml  requirements.md
configs/: default.yaml
src/reqlens/: __init__.py  cli.py  compat.py  config.py  exceptions.py
src/reqlens.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/reqlens/models/: __init__.py  schemas.py
src/reqlens/pipeline/: code_analyzer.py  critique.py  mapper.py  requirements_parser.py  test_generator.py
src/reqlens/providers/: __init__.py  anthropic_provider.py  base.py  mock_provider.py  openai_provider.py
tests/: test_cli_generate.py  test_pipeline_core.py
tests/fixtures/: ground_truth_tests.py  requirements.md
tests/fixtures/sample_app/: math_ops.py
